--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,29 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MovieRecommendationSystem
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\User\\OneDrive\\Desktop\\Msc Final Project\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
+file.reference.javafx-swt.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA FX SDK\\javafx-sdk-20.0.2\\lib\\javafx-swt.jar
+file.reference.javafx.base.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA FX SDK\\javafx-sdk-20.0.2\\lib\\javafx.base.jar
+file.reference.javafx.controls.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA FX SDK\\javafx-sdk-20.0.2\\lib\\javafx.controls.jar
+file.reference.javafx.fxml.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA FX SDK\\javafx-sdk-20.0.2\\lib\\javafx.fxml.jar
+file.reference.javafx.graphics.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA FX SDK\\javafx-sdk-20.0.2\\lib\\javafx.graphics.jar
+file.reference.javafx.media.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA FX SDK\\javafx-sdk-20.0.2\\lib\\javafx.media.jar
+file.reference.javafx.swing.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA FX SDK\\javafx-sdk-20.0.2\\lib\\javafx.swing.jar
+file.reference.javafx.web.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA FX SDK\\javafx-sdk-20.0.2\\lib\\javafx.web.jar
+file.reference.mysql-connector-j-8.1.0.jar=../../../Desktop/Msc Final Project/JAVA FX SDK/javafx-sdk-20.0.2/lib/mysql-connector-j-8.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.Stock_Control.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-8.1.0.jar}
+    ${file.reference.mysql-connector-j-8.1.0.jar}:\
+    ${file.reference.javafx-swt.jar}:\
+    ${file.reference.javafx.base.jar}:\
+    ${file.reference.javafx.controls.jar}:\
+    ${file.reference.javafx.fxml.jar}:\
+    ${file.reference.javafx.graphics.jar}:\
+    ${file.reference.javafx.media.jar}:\
+    ${file.reference.javafx.swing.jar}:\
+    ${file.reference.javafx.web.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
