--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.javafx.graphics.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA 
 file.reference.javafx.media.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA FX SDK\\javafx-sdk-20.0.2\\lib\\javafx.media.jar
 file.reference.javafx.swing.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA FX SDK\\javafx-sdk-20.0.2\\lib\\javafx.swing.jar
 file.reference.javafx.web.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA FX SDK\\javafx-sdk-20.0.2\\lib\\javafx.web.jar
+file.reference.json-20230618.jar=..\\..\\..\\Desktop\\Msc Final Project\\JAVA FX SDK\\javafx-sdk-20.0.2\\lib\\json-20230618.jar
 file.reference.mysql-connector-j-8.1.0.jar=../../../Desktop/Msc Final Project/JAVA FX SDK/javafx-sdk-20.0.2/lib/mysql-connector-j-8.1.0.jar
 includes=**
 jar.compress=false
@@ -57,7 +58,8 @@ javac.classpath=\
     ${file.reference.javafx.graphics.jar}:\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}
+    ${file.reference.javafx.web.jar}:\
+    ${file.reference.json-20230618.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
